# haskell-demo-2018

./: .gitignore  Procfile  README.md  file-server-demo.cabal  moo.cfg  stack.yaml  weeds
migrations/: 2018-06-16_23-32-00_initial-schema.txt  2018-09-17_10-00-00_files.txt
src/: Api.hs  Config.hs  DevelMain.hs  Error.hs  Init.hs  KeyGen.hs  Logging.hs  PSBridge.hs  ServantHelpers.hs  Utils.hs
src/Auth/: DatabaseModels.hs  LoginAPI.hs  Models.hs  PSBridge.hs  UserAPI.hs  UserStorage.hs
src/Auth/Storage/: UserStorage.hs
src/FileServer/: DatabaseModels.hs  FileServerAPI.hs  Models.hs  S3.hs  Storage.hs
src/Util/: Utils.hs
test/: Helpers.hs
test/Auth/: UserDbSpec.hs  UserServerWaiSpec.hs
test/Util/: UtilsSpec.hs
